[package]
name = "pairing_bn256"
version = "0.1.1"
authors = [
  "Sean Bowe <ewillbefull@gmail.com>",
  "Jack Grigg <jack@z.cash>",
  "Alex Vlasov <alex.m.vlasov@gmail.com>",
  "Alex Gluchowski <alex@gluchowski.net>"
]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/kilic/pairing"
readme = "README.md"
description = "BN254 elliptic curve and pairing implementation"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
ark-std = { version = "0.3", features = ["print-trace"] }

[dependencies]
subtle = "2.4"
ff = "0.12"
group = "0.12"
# pairing = "0.20"
static_assertions = "1.1.0"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
ec-gpu = { git = "https://github.com/lanbones/ec-gpu", optional = true }
bls12_381 = { git = "https://github.com/lanbones/bls12_381.git" }

[features]
default = []
asm = []
prefetch = []
gpu = ["ec-gpu"]

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[[bench]]
name = "basic_ops"
harness = false
